<resources>
    <string name="app_name" translatable="false">MikuRay</string>
    <string name="app_widget_name">Switch</string>
    <string name="widget_status_connected">Connected</string>
    <string name="widget_status_disconnected">Disconnected</string>
    <string name="widget_no_server_selected">No server selected</string>
    <string name="empty_server_list_title">No profile</string>
    <string name="empty_server_list_message">No profile, please add a profile</string>
    <string name="empty_subscription_list_title">No subscription</string>
    <string name="empty_subscription_list_message">No subscription, please add a subscription</string>
    <string name="empty_routing_list_title">No routing rule</string>
    <string name="empty_routing_list_message">No routing rule, please add a rule</string>
    <string name="app_tile_name">Switch</string>
    <string name="app_tile_first_use">First use of this feature, please use the app to add server</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="migration_success">Data migration success!</string>
    <string name="action_stop_service">Stop service</string>
    <string name="migration_fail">Data migration failed!</string>
    <string name="pull_down_to_refresh">Please pull down to refresh!</string>
    <string name="notification_action_stop_v2ray">Stop</string>
    <string name="notification_connect_time">timer : %s</string>
    <string name="notification_data_usage" formatted="false">total : ↑ %s  ↓ %s</string>
    <string name="toast_permission_denied">Unable to obtain the permission</string>
    <string name="toast_permission_denied_notification">Unable to obtain the notification permission</string>
    <string name="notification_action_more">Click for more</string>
    <string name="toast_services_start">Start Services</string>
    <string name="toast_services_stop">Stop Services</string>
    <string name="toast_services_success">Start Services Success</string>
    <string name="toast_services_failure">Start Services Failure</string>
    <string name="title_server">Config</string>
    <string name="menu_item_add_config">Add config</string>
    <string name="menu_item_save_config">Save config</string>
    <string name="menu_item_edit_config">Edit config</string>
    <string name="menu_item_del_config">Delete config</string>
    <string name="menu_item_import_config_qrcode">Import from QRcode</string>
    <string name="menu_item_import_config_clipboard">Import from Clipboard</string>
    <string name="menu_item_import_config_local">Import from locally</string>
    <string name="menu_item_import_config_policy_group">Add [Policy group]</string>
    <string name="menu_item_import_config_proxy_chain">Add [Proxy chain]</string>
    <string name="menu_item_import_config_manually_vmess">Add [VMess]</string>
    <string name="menu_item_import_config_manually_vless">Add [VLESS]</string>
    <string name="menu_item_import_config_manually_ss">Add [Shadowsocks]</string>
    <string name="menu_item_import_config_manually_socks">Add [SOCKS]</string>
    <string name="menu_item_import_config_manually_http">Add [HTTP]</string>
    <string name="menu_item_import_config_manually_trojan">Add [Trojan]</string>
    <string name="menu_item_import_config_manually_wireguard">Add [Wireguard]</string>
    <string name="menu_item_import_config_manually_hysteria2">Add [Hysteria2]</string>
    <string name="del_config_comfirm">Confirm delete ?</string>
    <string name="del_invalid_config_comfirm">Please test before deleting! Confirm delete ?</string>
    <string name="server_lab_remarks">remarks</string>
    <string name="server_lab_address">address</string>
    <string name="server_lab_port">port</string>
    <string name="server_lab_id">id</string>
    <string name="server_lab_alterid">alterId</string>
    <string name="server_lab_security">security</string>
    <string name="server_lab_network">Network</string>
    <string name="server_lab_more_function">Transport</string>
    <string name="server_lab_head_type">head type</string>
    <string name="server_lab_mode_type">gRPC mode</string>
    <string name="server_lab_request_host">host</string>
    <string name="server_lab_request_host_http">http host</string>
    <string name="server_lab_request_host_ws">ws host</string>
    <string name="server_lab_request_host_httpupgrade">httpupgrade host</string>
    <string name="server_lab_request_host_xhttp">xhttp host</string>
    <string name="server_lab_request_host_h2">h2 host</string>
    <string name="server_lab_request_host_quic">QUIC security</string>
    <string name="server_lab_request_host_grpc">gRPC Authority</string>
    <string name="server_lab_path">path</string>
    <string name="server_lab_path_ws">ws path</string>
    <string name="server_lab_path_httpupgrade">httpupgrade path</string>
    <string name="server_lab_path_xhttp">xhttp path</string>
    <string name="server_lab_path_h2">h2 path</string>
    <string name="server_lab_path_quic">QUIC key</string>
    <string name="server_lab_path_kcp">kcp seed</string>
    <string name="server_lab_path_grpc">gRPC serviceName</string>
    <string name="server_lab_stream_security">TLS</string>
    <string name="server_lab_stream_fingerprint">Fingerprint</string>
    <string name="server_lab_stream_alpn">Alpn</string>
    <string name="server_lab_allow_insecure">allowInsecure</string>
    <string name="server_lab_sni">SNI</string>
    <string name="server_lab_address3">address</string>
    <string name="server_lab_port3">port</string>
    <string name="server_lab_id3">password</string>
    <string name="server_lab_security3">security</string>
    <string name="server_lab_id4">Password</string>
    <string name="server_lab_id4_tip">Optional</string>
    <string name="server_lab_security4">User</string>
    <string name="server_lab_security4_tip">Optional</string>
    <string name="server_lab_encryption">encryption</string>
    <string name="server_lab_flow">flow</string>
    <string name="server_lab_public_key">PublicKey</string>
    <string name="server_lab_preshared_key">PreSharedKey</string>
    <string name="server_lab_preshared_key_tip">Optional</string>
    <string name="server_lab_short_id">ShortId</string>
    <string name="server_lab_spider_x">SpiderX</string>
    <string name="server_lab_mldsa65_verify">Mldsa65Verify</string>
    <string name="server_lab_secret_key">SecretKey</string>
    <string name="server_lab_reserved">Reserved</string>
    <string name="server_lab_reserved_tip">Optional, separated by commas</string>
    <string name="server_lab_local_address">Local address</string>
    <string name="server_lab_local_address_tip">Optional IPv4/IPv6, separated by commas</string>
    <string name="server_lab_local_mtu">Mtu</string>
    <string name="server_lab_local_mtu_tip">Optional, default 1420</string>
    <string name="server_lab_kcp_mtu">mKCP MTU</string>
    <string name="server_lab_kcp_mtu_tip">Optional, core default 1350</string>
    <string name="server_lab_kcp_tti">mKCP TTI</string>
    <string name="server_lab_kcp_tti_tip">Optional, core default 50</string>
    <string name="toast_success">Success</string>
    <string name="toast_failure">Failure</string>
    <string name="toast_none_data">There is nothing</string>
    <string name="toast_incorrect_protocol">Incorrect protocol</string>
    <string name="toast_decoding_failed">Decoding failed</string>
    <string name="title_file_chooser">Select a config</string>
    <string name="toast_require_file_manager">Please install a File Manager.</string>
    <string name="server_customize_config">Customize config</string>
    <string name="toast_config_file_invalid">Invalid config</string>
    <string name="server_lab_content">Content</string>
    <string name="toast_none_data_clipboard">There is no data in the clipboard</string>
    <string name="toast_invalid_url">Invalid URL</string>
    <string name="toast_insecure_url_protocol">Please do not use the insecure HTTP protocol subscription address</string>
    <string name="server_lab_need_inbound">Ensure inbounds port is consistent with the settings</string>
    <string name="toast_malformed_josn">Config malformed</string>
    <string name="server_lab_request_host6">Host(SNI)(Optional)</string>
    <string name="toast_action_not_allowed">Action not allowed</string>
    <string name="server_obfs_password">Obfs password</string>
    <string name="server_lab_port_hop">Port Hopping</string>
    <string name="server_lab_port_hop_tip">Will override the port</string>
    <string name="server_lab_port_hop_interval">Port Hopping Interval</string>
    <string name="server_lab_bandwidth_down">Bandwidth down</string>
    <string name="server_lab_bandwidth_down_tip">Supported units: k/m/g/t</string>
    <string name="server_lab_bandwidth_up">Bandwidth up</string>
    <string name="server_lab_bandwidth_up_tip">Supported units: k/m/g/t</string>
    <string name="server_lab_xhttp_mode">XHTTP Mode</string>
    <string name="server_lab_xhttp_extra">XHTTP Extra</string>
    <string name="server_lab_xhttp_extra_tip">Raw JSON, format: { XHTTPObject }</string>
    <string name="server_lab_final_mask">finalMask</string>
    <string name="server_lab_final_mask_tip">Raw JSON, format: { FinalMaskObject }</string>
    <string name="server_lab_ech_config_list">EchConfigList</string>
    <string name="server_lab_verify_peer_cert_by_name">Verify Peer Cert By Name</string>
    <string name="uwu_skip">Skip</string>
    <string name="uwu_next">Next</string>
    <string name="uwu_start">Start</string>
    <string name="uwu_welcome_title">Welcome to</string>
    <string name="uwu_welcome_summary_1">MikuRay,</string>
    <string name="uwu_welcome_summary_2">V2Ray/Xray client for Android with a Miku UI style.</string>
    <string name="uwu_welcome_summary_3">Made with Heart, Kotlin, Java code and more.</string>
    <string name="uwu_welcome_page1_desc">Free and open source V2Ray/Xray client for Android.</string>
    <string name="uwu_welcome_page2_desc">Supports VLESS, VMess, Trojan, Shadowsocks, and more.</string>
    <string name="uwu_welcome_page3_desc">Experience fast, secure internet wrapped in a cute Miku-inspired design.</string>
    <string name="title_mux_settings">Mux Settings</string>
    <string name="title_pref_mux_enabled">Enable Mux</string>
    <string name="summary_pref_mux_enabled">Faster, but it may cause unstable connectivity\nCustomize how to handle TCP, UDP and QUIC below</string>
    <string name="title_pref_mux_concurency">TCP connections</string>
    <string name="title_pref_mux_xudp_concurency">XUDP connectiond</string>
    <string name="title_pref_mux_concurency_tip">range -1 to 1024</string>
    <string name="title_pref_mux_xudp_quic">Handling of QUIC in mux tunnel</string>
    <string name="btn_scroll_to_selected_server">Go to selected profile</string>
    <string name="btn_scroll_to_top">Scroll to top</string>
    <string name="btn_scroll_to_bottom">Scroll to bottom</string>
    <string name="title_observatory_settings">Observatory Settings</string>
    <string name="title_pref_observatory_least_ping_interval">leastPing Interval</string>
    <string name="title_pref_observatory_least_load_interval">leastLoad Interval</string>
    <string name="title_pref_observatory_least_load_method">leastLoad HTTP Method</string>
    <string name="title_pref_observatory_least_load_sampling">leastLoad Sampling</string>
    <string name="title_pref_observatory_least_load_timeout">leastLoad Timeout</string>
    <string name="mikuray_password_export_desc">This password will encrypt the .mikuray file. You\'ll need it again to import the file, so don\'t lose it.</string>
    <string name="mikuray_password_hint">Password</string>
    <string name="mikuray_password_confirm_hint">Confirm password</string>
</resources>