<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.neko.widget.UwuPreferenceCategory
        android:key="pref_category_mux_settings"
        android:title="@string/title_mux_settings"
        app:sectionIcon="@drawable/rmx_development_git_merge_line">

        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/rmx_toggle_line"
            app:layout="@layout/uwu_top_switch"
            app:widgetLayout="@layout/uwu_widget_material_switch"
            android:key="pref_mux_enabled"
            android:summary="@string/summary_pref_mux_enabled"
            android:title="@string/title_pref_mux_enabled" />

        <EditTextPreference
            android:icon="@drawable/rmx_hashtag"
            app:dialogIcon="@drawable/rmx_hashtag"
            app:layout="@layout/uwu_mid"
            android:inputType="number"
            android:key="pref_mux_concurrency"
            android:summary="8"
            android:title="@string/title_pref_mux_concurency"
            android:dialogMessage="@string/title_pref_mux_concurency_tip" />

        <EditTextPreference
            android:icon="@drawable/rmx_hashtag"
            app:dialogIcon="@drawable/rmx_hashtag"
            app:layout="@layout/uwu_mid"
            android:inputType="number"
            android:key="pref_mux_xudp_concurrency"
            android:summary="8"
            android:title="@string/title_pref_mux_xudp_concurency"
            android:dialogMessage="@string/title_pref_mux_concurency_tip" />

        <ListPreference
            android:icon="@drawable/rmx_eth_line"
            app:dialogIcon="@drawable/rmx_eth_line"
            app:layout="@layout/uwu_bot"
            android:defaultValue="reject"
            android:entries="@array/mux_xudp_quic_entries"
            android:entryValues="@array/mux_xudp_quic_value"
            android:key="pref_mux_xudp_quic"
            android:summary="%s"
            android:title="@string/title_pref_mux_xudp_quic" />

    </com.neko.widget.UwuPreferenceCategory>

</PreferenceScreen>
