<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_mikuray_password_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAppearance="?textAppearanceBodyMedium"
            android:textColor="?colorOnSurfaceVariant"
            android:text="@string/mikuray_password_export_desc" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/mikuray_password_hint"
            app:startIconDrawable="@drawable/ic_lock_24dp"
            app:endIconMode="password_toggle"
            app:shapeAppearance="?shapeAppearanceCornerMedium"
            app:boxStrokeWidth="1.5dip"
            app:boxStrokeWidthFocused="1.5dip"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mikuray_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_mikuray_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/mikuray_password_confirm_hint"
            app:startIconDrawable="@drawable/ic_lock_24dp"
            app:endIconMode="password_toggle"
            app:shapeAppearance="?shapeAppearanceCornerMedium"
            app:boxStrokeWidth="1.5dip"
            app:boxStrokeWidthFocused="1.5dip"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_mikuray_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
